2004-09-06  Francois Dumont  <dums@...>

	* test/unit/nmake-evc-common.mak: Use of the dynamic runtime for the
	*-shared rules rather than the previous static thanks Michael Fink.
	
	* test/unit/nmake-evc*.mak: end of build code factorisation, use of 
	nmake-evc-common.mak within all makefiles thanks Michael Fink.
	
	* test/unit/locale_test.cpp: Application of a patch from Michael Fink
	to check the "C" locale on all platforms. Fix of the money_get_put test
	case for the "C" locale.
	
	* test/unit/allocator_test.cpp: new test case for std::allocator checks.

2004-09-05  Francois Dumont  <dums@...>

	* stlport/stl/_string_hash.h: Performance improvement, multiplication
	replaced by shift operations thanks Greg S.
	
	* stlport/config/stl_wince_4.h: removed, never used, stl_evc.h has been 
	prefered.
	
	* test/unit/string_test.cpp: addition of a new test short_string_optim_bug
	to check for a compiler bugs making the short string optim invalid thanks
	Michael Fink.
	
	* stlport/config/stl_evc.h: Deactivation of the short string optimization
	because of a compiler bug thanks Michael Fink.
	
	* src/explore: factorisation of the evc build makefiles thanks Michael Fink.
	
	* src/explore/Makefiles/nmake/lib/clean.mak, macro.mak: Addition of some
	file clean up for the clobber rule thanks Michael Fink.
	
2004-09-03  Francois Dumont  <dums@...>

	* test/unit/fstream_test.cpp, sstream_test.cpp: Move of the test for the
	infinite loop from FstreamTest test case to SstreamTest, addition of some
	checks.
	
	* test/unit/full_streambuf.h: streambuf implementation simulating full
	output.
	
	* stlport/exception: restauration of some modification removed after the
	rollback of the 2004-09-01.
	
	* stlport/config/stl_gcc.h: homogeneification of the coding standard used
	within STLport, 2 spaces indentations even for preprocessor directives.
	Doing so, discovered a weird configuration for Mac OS platform (__APPLE__)
	concerning the _STLP_NATIVE_INCLUDE_PATH macro definition, fixed.
	