@@ -77,7 +77,16 @@ public:                         // Destructor.
   virtual ~basic_streambuf();
 
 protected:                      // The default constructor.
-  basic_streambuf();
+  basic_streambuf()
+#if defined (_STLP_MSVC) && (_STLP_MSVC <= 1200) && defined (_STLP_USE_STATIC_LIB)
+    //We make it inline to avoid unresolved symbol.
+    : _M_gbegin(0), _M_gnext(0), _M_gend(0),
+      _M_pbegin(0), _M_pnext(0), _M_pend(0),
+      _M_locale()
+  {}
+#else
+  ;
+#endif
 
 protected:                      // Protected interface to the get area.
   char_type* eback() const { return _M_gbegin; } // Beginning
