@@ -1,3 +1,11 @@
+2004-09-07  Francois Dumont  <dums@...>
+
+	* stlport/config/stl_msvc.h: Add defines of the _STLP_USE_STATIC_LIB
+	or _STLP_USE_DYNAMIC_LIB depending on the current kind of build.
+	
+	* stlport/stl/_streambuf.h, _streambug.c: Fix an unresolved symbol 
+  problem for MSVC6 (and before?) when STLport is used as a static library.
+
 2004-09-06  Francois Dumont  <dums@...>
 
 	* test/unit/nmake-evc-common.mak: Use of the dynamic runtime for the
